[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/actors/Cat_animation.png" type="Texture" id=1]
[ext_resource path="res://src/actors/cat.gd" type="Script" id=2]
[ext_resource path="res://assets/actors/transform.png" type="Texture" id=3]
[ext_resource path="res://src/actors/Cursor.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sound/Meow 1.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/actors/Atome.png" type="Texture" id=6]
[ext_resource path="res://assets/sound/Meow 2.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/sound/Meow 3.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/sound/Meow 4.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/sound/Hurt.mp3" type="AudioStream" id=10]
[ext_resource path="res://assets/sound/Attack.mp3" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 9 )

[sub_resource type="Animation" id=2]
resource_name = "change_state"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ChangeState:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.49 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.49 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=16]
resource_name = "dying"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=12]
resource_name = "hit_alive"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteAttaque:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.79 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=13]
resource_name = "hit_carton"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteAttaque:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.79 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=14]
resource_name = "hit_dead"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteAttaque:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.79 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle_alive"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.6, 0.9, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle_carton"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 24, 26, 27 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle_dead"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 14 ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump_alive"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=9]
resource_name = "jump_carton"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 29 ]
}

[sub_resource type="Animation" id=10]
resource_name = "jump_dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}

[sub_resource type="Animation" id=4]
resource_name = "run_alive"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=11]
resource_name = "run_carton"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=8]
resource_name = "run_dead"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="CircleShape2D" id=15]

[sub_resource type="OccluderPolygon2D" id=17]
polygon = PoolVector2Array( -9, 1, 9, 1, 9, 7, -9, 7 )

[node name="Cat" type="KinematicBody2D" groups=["group_players"]]
collision_mask = 3
script = ExtResource( 2 )

[node name="Cursor_Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -19 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
hframes = 4
vframes = 9
frame = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="ChangeState" type="Sprite" parent="."]
position = Vector2( -71.95, 69.8537 )
scale = Vector2( 0.525, 0.463415 )
texture = ExtResource( 3 )
offset = Vector2( 138, -147 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/change_state = SubResource( 2 )
anims/dying = SubResource( 16 )
anims/hit_alive = SubResource( 12 )
anims/hit_carton = SubResource( 13 )
anims/hit_dead = SubResource( 14 )
anims/idle_alive = SubResource( 3 )
anims/idle_carton = SubResource( 7 )
anims/idle_dead = SubResource( 6 )
anims/jump_alive = SubResource( 5 )
anims/jump_carton = SubResource( 9 )
anims/jump_dead = SubResource( 10 )
anims/run_alive = SubResource( 4 )
anims/run_carton = SubResource( 11 )
anims/run_dead = SubResource( 8 )

[node name="SpriteAttaque" type="Sprite" parent="."]
position = Vector2( 14, 0 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )
hframes = 8
vframes = 2

[node name="Area2D" type="Area2D" parent="SpriteAttaque"]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpriteAttaque/Area2D"]
shape = SubResource( 15 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
show_behind_parent = true
position = Vector2( 0, 1 )
occluder = SubResource( 17 )

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="Audio" type="Node" parent="."]

[node name="Jump1" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 5 )
volume_db = -25.0

[node name="Jump2" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 7 )
volume_db = -22.0

[node name="Jump3" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 8 )
volume_db = -25.0

[node name="Jump4" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 9 )
volume_db = -25.0

[node name="Attack" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 11 )
volume_db = -5.0

[node name="Hurt" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 10 )
volume_db = -7.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
